--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+      - name: Checkout
+        uses: actions/checkout@v3
+        if: ${{ github.event_name == 'push' }}
+        with:
+          ref: ${{ github.ref_name }}3
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
       - name: Terraform Init
