--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         if: ${{ github.event_name == 'push' }}
         with:
-          ref: ${{ github.ref_name }}3
+          ref: ${{ github.ref_name }}
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
       - name: Terraform Init
