Try to use serviceaccount

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           project_id: 'sml-internal'
+          service_account: 'terraform-gke-bootstrap@sml-internal.iam.gserviceaccount.com'
           workload_identity_provider: 'projects/1071668732006/locations/global/workloadIdentityPools/github/providers/terraform-gke-bootstrap'
       - name: Run Terratest
         env:
