--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,6 +52,7 @@ jobs:
           project_id: 'sml-internal'
           service_account: 'terraform-gke-bootstrap@sml-internal.iam.gserviceaccount.com'
           workload_identity_provider: 'projects/1071668732006/locations/global/workloadIdentityPools/github/providers/terraform-gke-bootstrap'
+          token_format: access_token
       - name: Run Terratest
         env:
           TF_VAR_org_id: ${{ secrets.ORG_ID }}
